--- a/public/assets/css/nuevas_mejoras.css
+++ b/public/assets/css/nuevas_mejoras.css
@@ -470,3 +470,16 @@ border: 2px solid #5878ca;
 
   background-color: #CF202F!important;
 }
+
+
+.btn-danger {
+  color: #fff;
+  background-color: #dc3545!important;
+  border-color: #dc3545!important;
+}
+
+.btn-primary {
+  color: #fff;
+  background-color: #337ab7!important;
+  border-color: #2e6da4!important;
+}
