--- a/public/css/anotaciones-simple.css
+++ b/public/css/anotaciones-simple.css
@@ -89,7 +89,7 @@
     }
 
     .nombre-jd{
-     color:red !important; 
+     color:white !important; 
      font-weight: bold;
      font-size: 12px;
     }
